<resources>
    <string name="app_name">QC Family</string>
    <string name="title_activity_login">Sign in</string>

    <string name="alipay">支付宝支付</string>
    <string name="wxpay">微信支付</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="input_nickname">请输入昵称，最长30个字</string>
    <string name="new_address">新增收货人地址</string>
    <string name="upload_head">上传头像</string>
    <string name="notify_all">全部</string>
    <string name="notify_sys">系统</string>
    <string name="notify_con">聊天</string>
    <string name="notify_comment">评论回复</string>
    <string name="add_address">添加地址</string>

    <!-- Strings related to login -->
    <string name="prompt_account">请输入账号</string>
    <string name="prompt_nickname">请输入昵称</string>
    <string name="prompt_code">请输入验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="prompt_phone">请输入手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_new_password">请输入新密码</string>
    <string name="prompt_confirm_new_pwd">请确认新密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_logout">退出</string>
    <string name="error_invalid_account">请输入正确手机号</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_password_null">密码不能为空</string>
    <string name="error_incorrect_password">请输入正确密码</string>
    <string name="error_field_required">账号不能为空</string>
    <string name="action_forgot_pwd">忘记密码?</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_barber_work_state">BarberWorkStateActivity</string>
    <string name="title_activity_ticket_list">TicketListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Skip</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
