<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_holo_light"
    android:orientation="vertical">


    <com.xxl.kfapp.widget.TitleBar
        android:id="@+id/mTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y15"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x100"
            android:layout_marginStart="@dimen/x100"
            android:layout_marginTop="@dimen/y25">

            <TextView
                android:id="@+id/tv_all"
                android:layout_width="0dp"
                android:layout_height="@dimen/x90"
                android:layout_weight="1"
                android:background="@drawable/bg_stroke_red"
                android:gravity="center"
                android:text="@string/notify_all"
                android:textColor="@color/main_red"/>

            <TextView
                android:id="@+id/tv_sys"
                android:layout_width="0dp"
                android:layout_height="@dimen/x90"
                android:layout_weight="1"
                android:background="@drawable/bg_stroke_black"
                android:gravity="center"
                android:text="@string/notify_sys"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/tv_con"
                android:layout_width="0dp"
                android:layout_height="@dimen/x90"
                android:layout_weight="1"
                android:background="@drawable/bg_stroke_black"
                android:gravity="center"
                android:text="@string/notify_con"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="0dp"
                android:layout_height="@dimen/x90"
                android:layout_weight="1"
                android:background="@drawable/bg_stroke_black"
                android:gravity="center"
                android:text="@string/notify_comment"
                android:textColor="@color/gray"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/pRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y30"
            android:background="@color/white"/>
    </LinearLayout>
</LinearLayout>
